Add missing script messages, remove obsolete ones
Some messages only made sense in the context of the script

Change-Id: Ifee152f102664e693b8067a60707be639403fbc0

--- a/i18n/script/en.json
+++ b/i18n/script/en.json
@@ -4,11 +4,16 @@
 			"DannyS712"
 		]
 	},
+	"globalwatchlist-add": "Add",
 	"globalwatchlist-asof": "As of $1",
 	"globalwatchlist-changesfeed": "Sites with changes",
+	"globalwatchlist-changetypes": "Type of change",
+	"globalwatchlist-editwatchlist": "Edit watchlist",
 	"globalwatchlist-emptyfeed": "Sites with no changes",
+	"globalwatchlist-filters": "Filters",
 	"globalwatchlist-filter-anon": "Anonymous edits",
 	"globalwatchlist-filter-bot": "Bot edits",
+	"globalwatchlist-filter-minor": "Minor edits",
 	"globalwatchlist-filter-either": "Either",
 	"globalwatchlist-filter-not-anon": "Only edits made by logged-in users",
 	"globalwatchlist-filter-not-bot": "Only non-bot edits",
@@ -19,19 +24,22 @@
 	"globalwatchlist-globalwatchlistbacklink": "Back to Global watchlist",
 	"globalwatchlist-globalwatchlistlink": "Global watchlist",
 	"globalwatchlist-globalwatchlistsettingslink": "Settings",
-	"globalwatchlist-heading-globalwatchlist": "Global watchlist",
-	"globalwatchlist-heading-globalwatchlistsettings": "Global watchlist settings",
 	"globalwatchlist-markseen": "Mark as seen",
 	"globalwatchlist-markseen-all": "Mark all sites as seen",
 	"globalwatchlist-markseen-allconfirm": "Are you sure you want to mark sites as seen?",
 	"globalwatchlist-notify-redirecting": "Redirecting back to global watchlist...",
+	"globalwatchlist-notify-settingssaved": "Your settings have been saved",
 	"globalwatchlist-notify-savingfailed": "Failed to save settings. Please try again",
 	"globalwatchlist-option-confirmallsites": "Require confirmation before marking all sites as seen",
 	"globalwatchlist-option-fastmode": "Load faster, at the expense of less detail",
+	"globalwatchlist-option-grouppage": "Group results by page",
+	"globalwatchlist-option-live": "Live updates",
 	"globalwatchlist-otheroptions": "Other settings",
 	"globalwatchlist-refresh": "Refresh",
+	"globalwatchlist-remove": "Remove",
 	"globalwatchlist-resetchanges": "Reset changes made",
 	"globalwatchlist-rewatch": "rewatch",
+	"globalwatchlist-save": "Save settings",
 	"globalwatchlist-settings-error-anonbot": "Anonymous users cannot make bot edits",
 	"globalwatchlist-settings-error-anonminor": "Anonymous users cannot make minor edits",
 	"globalwatchlist-settings-error-badsites": "Invalid site(s): $1",
@@ -41,9 +49,5 @@
 	"globalwatchlist-show-logentries": "Show log entries",
 	"globalwatchlist-show-newpages": "Show new page creations",
 	"globalwatchlist-sitelist": "User defined site list",
-	"globalwatchlist-switch-dev": "Switch to development version",
-	"globalwatchlist-switch-stable": "Switch to stable version",
-	"globalwatchlist-title-globalwatchlist": "Global watchlist",
-	"globalwatchlist-title-globalwatchlistsettings": "Global watchlist settings",
 	"globalwatchlist-unwatch": "unwatch"
 }
