--- a/i18n/script/qqq.json
+++ b/i18n/script/qqq.json
@@ -4,11 +4,16 @@
 			"DannyS712"
 		]
 	},
+	"globalwatchlist-add": "Label for button to add another row for a site",
 	"globalwatchlist-asof": "When the feed was last refreshed; $1 = timestamp",
+	"globalwatchlist-changetypes": "Label for options for different change types",
 	"globalwatchlist-changesfeed": "Label for list of sites with changes to show",
+	"globalwatchlist-editwatchlist": "Label for link to [[Special:EditWatchlist]]",
 	"globalwatchlist-emptyfeed": "Label for list of sites with no changes to show",
+	"globalwatchlist-filters": "Label for all filter options",
 	"globalwatchlist-filter-anon": "Label for the anonymous edits filter",
 	"globalwatchlist-filter-bot": "Label for the bot edits filter",
+	"globalwatchlist-filter-minor": "Label for the minor edits filter",
 	"globalwatchlist-filter-either": "Option to not filter based on anonymous/bot/minor edits",
 	"globalwatchlist-filter-not-anon": "Option to only show edits not made by anonymous users",
 	"globalwatchlist-filter-not-bot": "Option to only show edits not made by bots",
@@ -19,19 +24,22 @@
 	"globalwatchlist-globalwatchlistbacklink": "Label for the link to the global watchlist from the settings page",
 	"globalwatchlist-globalwatchlistlink": "Label for the link to the global watchlist from the normal watchlist page",
 	"globalwatchlist-globalwatchlistsettingslink": "Label for the link to the settings page from the global watchlist",
-	"globalwatchlist-heading-globalwatchlist": "'Global watchlist' header",
-	"globalwatchlist-heading-globalwatchlistsettings": "Settings page header",
 	"globalwatchlist-markseen": "Button to mark a specific site as seen",
 	"globalwatchlist-markseen-all": "Button to mark all sites as seen",
 	"globalwatchlist-markseen-allconfirm": "Confirmation message for marking all sites as seen",
 	"globalwatchlist-notify-redirecting": "Notification of redirecting to global watchlist after settings saved",
+	"globalwatchlist-notify-settingssaved": "Notification that settings were saved successfully",
 	"globalwatchlist-notify-savingfailed": "Notification that settings were not saved successfully",
 	"globalwatchlist-option-confirmallsites": "Label for toggle option to opt-out of confirming before marking all sites as seen",
 	"globalwatchlist-option-fastmode": "Label for toggle option to activate fast mode",
+	"globalwatchlist-option-grouppage": "Label for toggle option to group results by page",
+	"globalwatchlist-option-live": "Label for toggle option for live updates",
 	"globalwatchlist-otheroptions": "Label for other script configuration options",
 	"globalwatchlist-refresh": "Label for the refresh button",
+	"globalwatchlist-remove": "Label for the button to remove a site row",
 	"globalwatchlist-resetchanges": "Label for the settings button to reset changes",
 	"globalwatchlist-rewatch": "Label for button to rewatch a page",
+	"globalwatchlist-save": "Label for the button to save settings",
 	"globalwatchlist-settings-error-anonbot": "Error message for invalid settings",
 	"globalwatchlist-settings-error-anonminor": "Error message for invalid settings",
 	"globalwatchlist-settings-error-badsites": "Error message for invalid settings; $1 = bad sites",
@@ -41,9 +49,5 @@
 	"globalwatchlist-show-logentries": "Label for the option to show log entries",
 	"globalwatchlist-show-newpages": "Label for the option to show new pages",
 	"globalwatchlist-sitelist": "Label for user defined site list",
-	"globalwatchlist-switch-dev": "Label for switching to the development version of the script",
-	"globalwatchlist-switch-stable": "Label for switching to the stable version of the script",
-	"globalwatchlist-title-globalwatchlist": "'Global watchlist' page title",
-	"globalwatchlist-title-globalwatchlistsettings": "Settings page title",
 	"globalwatchlist-unwatch": "Label for button to unwatch a page"
 }
