--- a/i18n/script/qqq.json
+++ b/i18n/script/qqq.json
@@ -6,8 +6,8 @@
 	},
 	"globalwatchlist-add": "Label for button to add another row for a site",
 	"globalwatchlist-asof": "When the feed was last refreshed; $1 = timestamp",
-	"globalwatchlist-changetypes": "Label for options for different change types",
 	"globalwatchlist-changesfeed": "Label for list of sites with changes to show",
+	"globalwatchlist-changetypes": "Label for options for different change types",
 	"globalwatchlist-editwatchlist": "Label for link to [[Special:EditWatchlist]]",
 	"globalwatchlist-emptyfeed": "Label for list of sites with no changes to show",
 	"globalwatchlist-filters": "Label for all filter options",
@@ -27,9 +27,9 @@
 	"globalwatchlist-markseen": "Button to mark a specific site as seen",
 	"globalwatchlist-markseen-all": "Button to mark all sites as seen",
 	"globalwatchlist-markseen-allconfirm": "Confirmation message for marking all sites as seen",
-	"globalwatchlist-notify-redirecting": "Notification of redirecting to global watchlist after settings saved",
-	"globalwatchlist-notify-settingssaved": "Notification that settings were saved successfully",
-	"globalwatchlist-notify-savingfailed": "Notification that settings were not saved successfully",
+	"globalwatchlist-notify-heading": "Heading for notification popups",
+	"globalwatchlist-notify-savingfailed": "Notification that settings were not saved",
+	"globalwatchlist-notify-settingssaved": "Notification that settings were saved",
 	"globalwatchlist-option-confirmallsites": "Label for toggle option to opt-out of confirming before marking all sites as seen",
 	"globalwatchlist-option-fastmode": "Label for toggle option to activate fast mode",
 	"globalwatchlist-option-grouppage": "Label for toggle option to group results by page",
