--- a/i18n/script/en.json
+++ b/i18n/script/en.json
@@ -27,9 +27,9 @@
 	"globalwatchlist-markseen": "Mark as seen",
 	"globalwatchlist-markseen-all": "Mark all sites as seen",
 	"globalwatchlist-markseen-allconfirm": "Are you sure you want to mark sites as seen?",
-	"globalwatchlist-notify-redirecting": "Redirecting back to global watchlist...",
-	"globalwatchlist-notify-settingssaved": "Your settings have been saved",
+	"globalwatchlist-notify-heading": "Global Watchlist",
 	"globalwatchlist-notify-savingfailed": "Failed to save settings. Please try again",
+	"globalwatchlist-notify-settingssaved": "Your settings have been saved",
 	"globalwatchlist-option-confirmallsites": "Require confirmation before marking all sites as seen",
 	"globalwatchlist-option-fastmode": "Load faster, at the expense of less detail",
 	"globalwatchlist-option-grouppage": "Group results by page",
