Change “JavasScript” to “JavaScript”.
Change-Id: I9480814ae9497f6531687b2193781234dffc260c

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,5 +11,5 @@
 	"globalwatchlistsettings-summary": "Special page to manage a global watchlist",
 	"globalwatchlist-gotoglobal": "Global watchlist",
 	"globalwatchlist-gotoglobal-tooltip": "View global watchlist",
-	"globalwatchlist-javascript-required": "The GlobalWatchlist special pages require JavasScript to work"
+	"globalwatchlist-javascript-required": "The GlobalWatchlist special pages require JavaScript to work"
 }
