Settings validation: Show the user the problems with their settings
Also, apparently the api doesn't enforce that sites need to be provided,
just that they are specified (can be specified to none) so add an error
code for that.

On the other hand, the javascript ensures that empty strings aren't passed
to the api, so sites aren't able to be "empty", and that error is unneeded

Bug: T255355
Change-Id: I52fc9b7fc9ef95b81f0d2811924f957366ae819c

--- a/i18n/api/qqq.json
+++ b/i18n/api/qqq.json
@@ -12,5 +12,6 @@
 	"apihelp-globalwatchlistsettings-param-confirmallsites": "{{doc-apihelp-param|globalwatchlistsettings|confirmallsites}}",
 	"apihelp-globalwatchlistsettings-param-fastmode": "{{doc-apihelp-param|globalwatchlistsettings|fastmode}}",
 	"apihelp-globalwatchlistsettings-param-grouppage": "{{doc-apihelp-param|globalwatchlistsettings|grouppage}}",
-	"apihelp-globalwatchlistsettings-param-showtypes": "{{doc-apihelp-param|globalwatchlistsettings|showtypes}}"
+	"apihelp-globalwatchlistsettings-param-showtypes": "{{doc-apihelp-param|globalwatchlistsettings|showtypes}}",
+	"apierror-globalwatchlist-invalid-settings": "{{doc-apierror}}"
 }
