--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -12,5 +12,6 @@
 	"apihelp-globalwatchlistsettings-param-confirmallsites": "Require confirmation to mark all sites as seen",
 	"apihelp-globalwatchlistsettings-param-fastmode": "Enable fast mode",
 	"apihelp-globalwatchlistsettings-param-grouppage": "Group results by page",
-	"apihelp-globalwatchlistsettings-param-showtypes": "Types of changes to show"
+	"apihelp-globalwatchlistsettings-param-showtypes": "Types of changes to show",
+	"apierror-globalwatchlist-invalid-settings": "Invalid settings selected"
 }
