Revert "Localisation updates from https://translatewiki.net."
This reverts commit 0adfc1da8def0650d618517e8181265fe2d7e61e.

Reason for revert: Broken export

Change-Id: I4b9809a1350b06d35033200f6d39fd4855cb5440

--- a/i18n/script/es.json
+++ b/i18n/script/es.json
@@ -28,7 +28,7 @@
 	"globalwatchlist-globalwatchlistsettingslink": "Configuración",
 	"globalwatchlist-markseen": "Marcar como visto",
 	"globalwatchlist-markseen-all": "Marcar todos los sitios como vistos",
-	"globalwatchlist-markseen-allconfirm": "¿Confirmas que quieres marcar los sitios como vistos?",
+	"globalwatchlist-markseen-allconfirm": "¿Estás seguro que quieres marcar los sitios como vistos?",
 	"globalwatchlist-notify-heading": "Lista de seguimiento global",
 	"globalwatchlist-notify-savingfailed": "No se pudo guardar la configuración. Inténtalo de nuevo.",
 	"globalwatchlist-notify-settingssaved": "Se han guardado tus cambios.",
