Add ability to mark a page as read
- add markPageAsSeen
- rename markAsSeen to markAllAsSeen

No vue support for this feature atm

Bug: T334246
Change-Id: Iecd9cf6b0c03a5600b245b1e5d9be17a1e45d51e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -85,5 +85,6 @@
 	"globalwatchlist-tour-types": "Change types",
 	"globalwatchlist-tour-types-description": "Users can control what types of changes should be shown.",
 	"globalwatchlist-unwatch": "unwatch",
+	"globalwatchlist-markpageseen": "mark page as read",
 	"prefs-globalwatchlist": "Global watchlist"
 }
