Update error message for temp users trying to use special pages
Why:
* In Ie0dd06f51b1e2b85eef6be377f673a02732ce604, the SpecialPage
  ::requiredNamed method was updated to redirect temporary accounts
  to Special:CreateAccount.
* This included adding a new message key used for the warning that
  is shown on Special:CreateAccount.
* A new message key needs to be added to compliment the
  existing 'globalwatchlist-must-login' message for use on the
  Special:CreateAccount page.

What:
* Add the 'globalwatchlist-must-login-for-temp-user' message key
* Add the new message key to the LoginFormValidErrorMessages hook
  definition.

Depends-On: Ie0dd06f51b1e2b85eef6be377f673a02732ce604
Bug: T358586
Change-Id: Iaf03cec14f454291b3c4448d7c050fdf9d3727dd

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,6 +43,7 @@
 	"globalwatchlist-markseen-all": "Mark all sites as seen",
 	"globalwatchlist-markseen-allconfirm": "Are you sure you want to mark all sites as seen?",
 	"globalwatchlist-must-login": "Please log in to use the GlobalWatchlist special pages",
+	"globalwatchlist-must-login-for-temp-user": "Please create an account to use the GlobalWatchlist special pages",
 	"globalwatchlist-notify-heading": "Global Watchlist",
 	"globalwatchlist-notify-savingfailed": "Failed to save settings. Please try again",
 	"globalwatchlist-notify-settingssaved": "Your settings have been saved. [[Special:GlobalWatchlist|Return to global watchlist]].",
